--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,17 @@ button, input {
     font-family: "Roboto", sans-serif;
 }
 
-input::placeholder{
+input::placeholder {
     font-family: "Roboto", sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(149, 149, 197);
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+a:active {
+    color: red;
 }
